CVS Code -
- General
	- Preliminary syntax highlighting support.  New functions
	  colortoint() and parse_color() in rcfile.c, new code in 
	  edit_add() in winio.c to actually do the highlighting.  It's
	  not even close to pretty yet :P
- files.c:
  add_open_file()
	- Get rid of unsetting MARK_ISSET because otherwise writing
	  marked text will automatically unset the marker with
	  multibuffer enabled.
- global.c:
	- Define currshortcut and currslen when either DISABLE_MOUSE
	  or DISABLE_HELP or DISABLE_BROWSER is not defined (Silvan
	  Minghetti).
- nano.c:
  main()
	- Add Esc-[-[IGL] keys for FreeBSD Console (PgUp,PgDn,Insert).
        - Added better Hurd support for function keys (Alt-V,U,9,@,F).
  signal_init()
        - do SIG_IGN for the SIGTSTP sigaction regardless of whether
          we have _POSIX_VDISABLE or not (more Hurd fixes)
  help_init()
	- Typo fixes and additions to the new help texts.
- po/de.po:
	- German translation updates (Karl Eichwalder).
- po/ru.po:
	- Russian translation updates (Sergey A. Ribalchenko).
- po/sv.po:
	- Swedish translation updates (Christian Rose).
- po/da.po:
	- Danish translation updates (Keld Simonse).
- po/es.po:
	- Spanish translation updates (Jordi).

nano-1.1.3 - 10/26/2001
- General
	- Finally wrote function-specific help mode.  Changes to
	  nano.c:help_init() and winio.c:do_help().  Changed
	  currshortcut and currslen #ifdefs to depend on both 
	  DISABLE_HELP and DISABLE_MOUSE being defined to not 
	  include.  Changed all the shortcuts and lengths.
	- Fixed null_at to ACTUALLY DO SOMETHING with its arg.  Again,
	  this was causing nasty errors if the call to nrealloc moved
	  where the data was located.
	- Changed header comments to say "version 2" instead of "version
	  1" as the COPYING file is actually version 2 of the GPL (bug
	  noticed by Jordi Mallach).
- cut.c:
  do_cut_text()
	-  Check to see whether marked text is contained within edit